RESOLVED FIXED66049
IndexedDB: Object store records don't need to have keys in all indexes
https://bugs.webkit.org/show_bug.cgi?id=66049
Summary IndexedDB: Object store records don't need to have keys in all indexes
Hans Wennborg
Reported 2011-08-11 06:17:04 PDT
IndexedDB: Object store records don't need to have keys in all indexes
Attachments
Patch (7.94 KB, patch)
2011-08-11 06:22 PDT, Hans Wennborg
tony: review+
Hans Wennborg
Comment 1 2011-08-11 06:22:12 PDT
Hans Wennborg
Comment 2 2011-08-11 06:26:15 PDT
The relevant spec text is here: http://dvcs.w3.org/hg/IndexedDB/raw-file/tip/Overview.html#dfn-steps-for-storing-a-record-into-an-object-store, where in 7.2 it says: "If index's key path is a string, then evaluate it on value. If this does not yield a value don't take any further actions for this index. Otherwise set the result to index key." David, would you like to take a look?
David Grogan
Comment 3 2011-08-11 10:00:49 PDT
Comment on attachment 103611 [details] Patch LGTM Thanks for fixing this so fast.
Hans Wennborg
Comment 4 2011-08-11 10:01:55 PDT
Tony: would you like to take a look?
Hans Wennborg
Comment 5 2011-08-12 02:32:51 PDT
Note You need to log in before you can comment on or make changes to this bug.