IndexedDB: Object store records don't need to have keys in all indexes https://bugs.webkit.org/show_bug.cgi?id=66049

Reviewed by Tony Chang.

Source/WebCore:

Allow inserting records in an object store even though they don't
yield keys in some index. The spec has changed in this regard.

* storage/IDBObjectStoreBackendImpl.cpp:
(WebCore::IDBObjectStoreBackendImpl::putInternal):

LayoutTests:

Update test to make sure it's possible to add an object store record
even though it doesn't yield keys in every index.

* storage/indexeddb/index-basics-expected.txt:
* storage/indexeddb/index-basics.html:

Canonical link: https://commits.webkit.org/81980@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@92951 268f45cc-cd09-0410-ab3c-d52691b4dbfc